Added video link

--- a/Project_01.ipynb
+++ b/Project_01.ipynb
@@ -6,13 +6,11 @@
    "metadata": {},
    "source": [
     "# SI 201 Project 1\n",
-    "# Your name:Isaiah Ramirez\n",
-    "# Your student id: 31550177\n",
-    "# Your email: izzyrmrz@umich.edu\n",
-    "# Who or what you worked with on this homework (including generative AI like ChatGPT):I used Chatgpt / Claude / Gemini to go over my code and tell me what I did wrong function by function or help me better represent the data being showed via a different visualization.\n",
-    "# If you worked with generative AI also add a statement for how you used it.  \n",
-    "# e.g.:\n",
-    "# Asked Chatgpt hints for debugging and suggesting the general sturcture of the code"
+    "## Video link : https://drive.google.com/file/d/1dtQ9tx7MKbubFco4fgQeMYwJj089Vr68/view?usp=drive_link\n",
+    "## Your name:Isaiah Ramirez\n",
+    "## Your student id: 31550177\n",
+    "## Your email: izzyrmrz@umich.edu\n",
+    "## Who or what you worked with on this homework (including generative AI like ChatGPT):I used Chatgpt / Claude / Gemini to go over my code and tell me what I did wrong function by function or help me better represent the data being showed via a different visualization."
    ]
   },
   {
